Internacionalzación para web y mobile

--- a/UI/apps/mobile/src/app/login/registro-cliente/registro-cliente.component.html
+++ b/UI/apps/mobile/src/app/login/registro-cliente/registro-cliente.component.html
@@ -4,7 +4,7 @@
     <div class="p-16" [formGroup]="formulario">
       <mat-card class="sin-sombra-card">
         <div class="row gap-8 align-items-center p-16">
-          <img src="/assets/images/notas.svg" width="34" height="31" />
+          <img src="assets/images/notas.svg" width="34" height="31" />
           <h3 i18n="login.registroCliente.cliente">Registro de cliente</h3>
         </div>
         <div class="column gap-16 p-12">
