--- a/UI/apps/web/src/app/analisis-tiendas/analisis-tiendas-container/analisis-tiendas-container.component.html
+++ b/UI/apps/web/src/app/analisis-tiendas/analisis-tiendas-container/analisis-tiendas-container.component.html
@@ -2,7 +2,7 @@
   <mat-card class="sin-sombra-card">
     <mat-card-content>
       <div class="row gap-8 align-items-center">
-        <img src="/assets/images/video.svg" width="35" height="31" />
+        <img src="assets/images/video.svg" width="35" height="31" />
         <h3 i18n="analisisTiendas">Análisis de tiendas</h3>
       </div>
     </mat-card-content>
