--- a/UI/apps/web/src/app/informes/formulario-consulta-informes/formulario-consulta-informes.component.html
+++ b/UI/apps/web/src/app/informes/formulario-consulta-informes/formulario-consulta-informes.component.html
@@ -1,6 +1,6 @@
 <mat-card class="sin-sombra-card">
   <div class="row gap-8 align-items-center p-16">
-    <img src="/assets/images/notas.svg" width="34" height="31" />
+    <img src="assets/images/notas.svg" width="34" height="31" />
     <h3 i18n="informes.titulo">Informes</h3>
   </div>
   <div class="p-12 row gap-8 align-items-center" [formGroup]="formulario">
