--- a/UI/apps/web/src/app/compras-bodega/registrar-bodega/registrar-bodega.component.html
+++ b/UI/apps/web/src/app/compras-bodega/registrar-bodega/registrar-bodega.component.html
@@ -1,6 +1,6 @@
 <mat-card class="sin-sombra-card">
   <div class="row gap-8 align-items-center p-16">
-    <img src="/assets/images/bolsa.svg" width="34" height="31" />
+    <img src="assets/images/bolsa.svg" width="34" height="31" />
     <h3 i18n="bodegas.registrar.titulo">Compras y bodegas</h3>
   </div>
   <div class="p-12 column gap-16" [formGroup]="formulario">
