feat(visitas): refactor visit registration to use IDateTimeProvider and disable date/time inputs

--- a/UI/apps/mobile/src/app/vendedores/registrar-visita/registrar-visita.component.html
+++ b/UI/apps/mobile/src/app/vendedores/registrar-visita/registrar-visita.component.html
@@ -17,6 +17,7 @@
             data-testid="calendar-registrar-visita"
             matInput
             [matDatepicker]="fecha"
+            [disabled]="true"
           />
           <mat-hint>DD/MM/YYYY</mat-hint>
           <mat-datepicker-toggle
@@ -34,6 +35,7 @@
             format="HH:mm"
             formControlName="hora"
             data-testid="timer-registrar-visita"
+            [disabled]="true"
             required
           />
           <mat-icon class="color-grey-700" matSuffix>access_time</mat-icon>
